# MoshiLite

./: README.md  _Data-Free Knowledge Distillation Explained .md  chat_extracted.txt  moshilite_project_plan_v10.md  moshilite_report_v2.tex  pip_output.txt  pyproject.toml
configs/: stage1_analysis.yaml  stage2_pruning.yaml  stage4a_self_play.yaml  stage4b_training.yaml  stage6_quantization.yaml
notebooks/: 00b_baseline_evaluation.ipynb  02_structured_pruning.ipynb  02b_unstructured_pruning.ipynb  04a_cross_play_generation.ipynb  04a_self_play_generation.ipynb  04b_student_kd_training.ipynb  05_results_dashboard.ipynb  06_audio_demo.ipynb  06b_cross_play.ipynb  07_sparsegpt_xplay_pruning.ipynb  moshilite_phase_B.ipynb  v1_scattered_uni_04b_student_kd_training.ipynb
notebooks/Training/: magnitude_30pct_04b_student_kd_training.ipynb  sparsegpt_30pct_04b_student_kd_training.ipynb  v1_scattered_nonuni_04b_student_kd_training.ipynb  v2a_cont_strict_nonuni_04b_student_kd_training.ipynb  v3_collapse_uni_04b_student_kd_training.ipynb  (+6 more)
reports/: component_evaluation_report.aux  component_evaluation_report.out  component_evaluation_report.tex
scripts/: download_baseline_subsets.py  download_datasets.py  encode_tokens.py  export_model.py  generate_self_play.py  inspect_conversations.py  precompute_teacher.py  run_sqa_eval.py
tests/: test_alignment.py  test_block_influence.py  test_checkpoint_resume.py  test_dual_stream.py  test_experiment_helpers.py  test_kd_losses.py  test_librilight_sampler.py  test_moshi_hooks.py  test_pruning.py  test_staging.py  test_token_encoding.py
(+48 files in other folders)
